// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileProperties molecules Admires 1`] = `
.c3 {
  display: inline-block;
  overflow: hidden;
  line-height: 1;
  vertical-align: middle;
  border-radius: 2px;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  width: 100%;
}

.c9 {
  position: absolute;
  top: 85%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 3;
  font-size: 0.75rem;
  color: #777;
}

.c7 {
  margin-top: 0.5rem;
  position: relative;
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #eb2e3e;
  height: 0.063rem;
  width: 100%;
  margin: 0;
  padding: 0;
  cursor: pointer;
}

.c8::-webkit-slider-thumb {
  background-color: #fff;
  border: 0.063rem solid #eb2e3e;
  width: 1.563rem;
  height: 1.563rem;
  border-radius: 50%;
  position: relative;
  z-index: 2;
}

.c8::-ms-tooltip {
  display: none;
}

.c8::-ms-tooltip {
  display: none;
}

.c8::-moz-focus-outer {
  border: 0;
}

.c8::-moz-range-track {
  height: 0;
}

.c8::-moz-range-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #fff;
  width: 1.563rem;
  height: 1.563rem;
  border: 0.063rem solid #eb2e3e;
  border-radius: 50%;
  position: relative;
  z-index: 2;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 0.75rem;
  color: #555;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1.25rem;
}

.c1 > * {
  width: 50%;
}

.c1 + .c0 {
  border-top: 1px solid #ccc;
}

.c1 img {
  width: 2.5rem;
  height: 2.5rem;
  margin-right: 0.625rem;
}

.c1 p {
  font-size: 0.875rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className=""
>
  <div
    className="c0 c1"
  >
    <div
      className="c2"
    >
      <img
        alt=""
        className="c3"
        height={20}
        size={20}
        src="https://s3.amazonaws.com/uifaces/faces/twitter/johnsmithagency/128.jpg"
        width={20}
      />
      <span
        className=""
      >
        Rico
      </span>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <p>
            Berkshire
          </p>
          <p>
            Administrator
          </p>
        </div>
        <div
          className="c7"
        >
          <input
            className="c8"
            step="25"
            type="range"
          />
          <span
            className="c9"
            style={
              Object {
                "left": "50%",
              }
            }
          >
            3
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c0 c1"
  >
    <div
      className="c2"
    >
      <img
        alt=""
        className="c3"
        height={20}
        size={20}
        src="https://s3.amazonaws.com/uifaces/faces/twitter/conspirator/128.jpg"
        width={20}
      />
      <span
        className=""
      >
        Crossing
      </span>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <p>
            harness
          </p>
          <p>
            card
          </p>
        </div>
        <div
          className="c7"
        >
          <input
            className="c8"
            step="25"
            type="range"
          />
          <span
            className="c9"
            style={
              Object {
                "left": "50%",
              }
            }
          >
            3
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c0 c1"
  >
    <div
      className="c2"
    >
      <img
        alt=""
        className="c3"
        height={20}
        size={20}
        src="https://s3.amazonaws.com/uifaces/faces/twitter/namankreative/128.jpg"
        width={20}
      />
      <span
        className=""
      >
        Soap
      </span>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <p>
            deposit
          </p>
          <p>
            Computer
          </p>
        </div>
        <div
          className="c7"
        >
          <input
            className="c8"
            step="25"
            type="range"
          />
          <span
            className="c9"
            style={
              Object {
                "left": "50%",
              }
            }
          >
            3
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c0 c1"
  >
    <div
      className="c2"
    >
      <img
        alt=""
        className="c3"
        height={20}
        size={20}
        src="https://s3.amazonaws.com/uifaces/faces/twitter/charlesrpratt/128.jpg"
        width={20}
      />
      <span
        className=""
      >
        Israel
      </span>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <p>
            solution
          </p>
          <p>
            monitor
          </p>
        </div>
        <div
          className="c7"
        >
          <input
            className="c8"
            step="25"
            type="range"
          />
          <span
            className="c9"
            style={
              Object {
                "left": "50%",
              }
            }
          >
            3
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileProperties molecules App Bar 1`] = `
.c0 {
  padding: 24px;
  top: 0;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
}

<header
  className=""
>
  <div
    className="c0"
  >
    ranking 🤔
  </div>
</header>
`;

exports[`FileProperties molecules Heros 1`] = `
.c0 {
  display: inline-block;
  overflow: hidden;
  line-height: 1;
  vertical-align: middle;
  border-radius: 2px;
}

<div
  className=""
>
  <img
    alt=""
    className="c0"
    height={20}
    size={20}
    src="https://s3.amazonaws.com/uifaces/faces/twitter/the_purplebunny/128.jpg"
    width={20}
  />
  <span
    className=""
  >
    system
  </span>
</div>
`;

exports[`FileProperties molecules Range Input 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 100%;
}

.c5 {
  position: absolute;
  top: 85%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 3;
  font-size: 0.75rem;
  color: #777;
}

.c3 {
  margin-top: 0.5rem;
  position: relative;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #eb2e3e;
  height: 0.063rem;
  width: 100%;
  margin: 0;
  padding: 0;
  cursor: pointer;
}

.c4::-webkit-slider-thumb {
  background-color: #fff;
  border: 0.063rem solid #eb2e3e;
  width: 1.563rem;
  height: 1.563rem;
  border-radius: 50%;
  position: relative;
  z-index: 2;
}

.c4::-ms-tooltip {
  display: none;
}

.c4::-ms-tooltip {
  display: none;
}

.c4::-moz-focus-outer {
  border: 0;
}

.c4::-moz-range-track {
  height: 0;
}

.c4::-moz-range-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #fff;
  width: 1.563rem;
  height: 1.563rem;
  border: 0.063rem solid #eb2e3e;
  border-radius: 50%;
  position: relative;
  z-index: 2;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 0.75rem;
  color: #555;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <p>
        Orchestrator
      </p>
      <p>
        Licensed
      </p>
    </div>
    <div
      className="c3"
    >
      <input
        className="c4"
        step="25"
        type="range"
      />
      <span
        className="c5"
        style={
          Object {
            "left": "50%",
          }
        }
      >
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`FileProperties molecules Ranges 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 100%;
}

.c3 {
  position: relative;
  border-bottom: 0.063rem solid #eb2e3e;
  margin-top: 1.25rem;
  width: 100%;
  height: 0.063rem;
  box-sizing: border-box;
}

.c4 {
  position: absolute;
  border: 0.063rem solid #eb2e3e;
  width: 1.563rem;
  height: 1.563rem;
  border-radius: 50%;
  top: 50%;
  background-color: #fff;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 2;
  box-sizing: border-box;
}

.c5 {
  position: absolute;
  top: 85%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 3;
  font-size: 0.75rem;
  color: #777;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 0.75rem;
  color: #555;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <p>
        withdrawal
      </p>
      <p>
        Enterprise-wide
      </p>
    </div>
    <div
      className="c3"
    >
      <div
        className="c4"
        style={
          Object {
            "left": "50%",
          }
        }
      />
      <span
        className="c5"
        style={
          Object {
            "left": "50%",
          }
        }
      >
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`FileProperties molecules Ranks 1`] = `
.c5 {
  display: inline-block;
  overflow: hidden;
  line-height: 1;
  vertical-align: middle;
  border-radius: 2px;
}

.c6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  width: 100%;
}

.c11 {
  position: absolute;
  top: 85%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 3;
  font-size: 0.75rem;
  color: #777;
}

.c9 {
  margin-top: 0.5rem;
  position: relative;
}

.c10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #eb2e3e;
  height: 0.063rem;
  width: 100%;
  margin: 0;
  padding: 0;
  cursor: pointer;
}

.c10::-webkit-slider-thumb {
  background-color: #fff;
  border: 0.063rem solid #eb2e3e;
  width: 1.563rem;
  height: 1.563rem;
  border-radius: 50%;
  position: relative;
  z-index: 2;
}

.c10::-ms-tooltip {
  display: none;
}

.c10::-ms-tooltip {
  display: none;
}

.c10::-moz-focus-outer {
  border: 0;
}

.c10::-moz-range-track {
  height: 0;
}

.c10::-moz-range-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #fff;
  width: 1.563rem;
  height: 1.563rem;
  border: 0.063rem solid #eb2e3e;
  border-radius: 50%;
  position: relative;
  z-index: 2;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 0.75rem;
  color: #555;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1.25rem;
}

.c3 > * {
  width: 50%;
}

.c3 + .c2 {
  border-top: 1px solid #ccc;
}

.c3 img {
  width: 2.5rem;
  height: 2.5rem;
  margin-right: 0.625rem;
}

.c3 p {
  font-size: 0.875rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 span {
  font-weight: bold;
  margin-right: 1.875rem;
}

.c1 + .c0 {
  margin-top: 1rem;
}

<div
  className="c0 c1"
>
  <span>
    2798
  </span>
  <div
    className="c2 c3"
  >
    <div
      className="c4"
    >
      <img
        alt=""
        className="c5"
        height={20}
        size={20}
        src="https://s3.amazonaws.com/uifaces/faces/twitter/bluesix/128.jpg"
        width={20}
      />
      <span
        className=""
      >
        Shoes
      </span>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <p>
            markets
          </p>
          <p>
            District
          </p>
        </div>
        <div
          className="c9"
        >
          <input
            className="c10"
            step="25"
            type="range"
          />
          <span
            className="c11"
            style={
              Object {
                "left": "50%",
              }
            }
          >
            3
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileProperties molecules Results 1`] = `
Array [
  .c0 {
  margin: 0 auto;
  color: #3fa2fc;
  font-size: 1.563rem;
  font-weight: bold;
  width: 5rem;
  height: 5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0.188rem solid #3fa2fc;
  border-radius: 50%;
}

.c1 {
  text-align: center;
}

.c1 span {
  display: block;
  font-size: 0.625rem;
  font-weight: normal;
  margin-bottom: 0.313rem;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <span>
        50人中
      </span>
      10位
    </div>
  </div>,
  .c0 {
  margin-top: 0.938rem;
  font-size: 0.875rem;
  line-height: 1.4;
}

<p
    className="c0"
  >
    International
  </p>,
]
`;
